parser/vlang_parser.go
// Code generated from parser/Vlang.g4 by ANTLR 4.13.2. DO NOT EDIT.

package compiler // Vlang
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type VlangParser struct {
	*antlr.BaseParser
}

var VlangParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func vlangParserInit() {
	staticData := &VlangParserStaticData
	staticData.LiteralNames = []string{
		"", "'println'", "'print'", "'range'", "'fn'", "'struct'", "'int'",
		"'float'", "'f64'", "'string'", "'bool'", "'char'", "'void'", "'len'",
		"'cap'", "'append'", "'mut'", "", "", "", "", "", "", "", "'if'", "'else'",
		"'while'", "'for'", "'in'", "'return'", "'break'", "'continue'", "'switch'",
		"'case'", "'default'", "'fallthrough'", "", "'+'", "'-'", "'*'", "'/'",
		"'%'", "'!'", "'||'", "'&&'", "'=='", "'!='", "'<'", "'<='", "'>'",
		"'>='", "'='", "'++'", "'--'", "'+='", "'-='", "'*='", "'/='", "'%='",
		"':'", "';'", "'('", "')'", "'['", "'{'", "']'", "'}'", "'.'", "','",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "LEN", "CAP", "APPEND",
		"MUT", "BOOLEANO", "ENTERO", "FLOAT", "DECIMAL", "CADENA", "CARACTER",
		"STRING_INTERPOLATION", "IF_KW", "ELSE_KW", "WHILE_KW", "FOR_KW", "IN_KW",
		"RETURN_KW", "BREAK_KW", "CONTINUE_KW", "SWITCH_KW", "CASE_KW", "DEFAULT_KW",
		"FALLTHROUGH_KW", "ID", "PLUS", "MINUS", "MUL", "DIV", "MOD", "NOT",
		"OR", "AND", "EQ", "NEQ", "LT", "LE", "GT", "GE", "ASSIGN", "INC", "DEC",
		"PLUS_ASSIGN", "MINUS_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN",
		"COLON", "SEMICOLON", "LPAREN", "RPAREN", "LBRACK", "LCOR", "RBRACK",
		"RCOR", "DOT", "COMMA", "WS", "LINE_COMMENT", "BLOCK_COMMENT",
	}
	staticData.RuleNames = []string{
		"programa", "stmt", "if_stmt", "if_chain", "else_stmt", "println", "print",
		"while_stmt", "for_stmt", "for_enhanced_stmt", "for_init", "for_update",
		"switch_stmt", "switch_case", "case_values", "default_case", "range",
		"func_call", "func_dcl", "struct_dcl", "struct_field", "transfer_stmt",
		"assign_stmt", "decl_stmt", "array_literal", "id_pattern", "expresion",
		"parametros", "func_param", "arg_list", "func_arg", "valores", "valor",
		"strct_instancia", "struct_prop", "var_type", "struct_vector", "incredecre",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// VlangParserInit initializes any static state used to implement VlangParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewVlangParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func VlangParserInit() {
	staticData := &VlangParserStaticData
	staticData.once.Do(vlangParserInit)
}

// NewVlangParser produces a new parser instance for the optional input antlr.TokenStream.
func NewVlangParser(input antlr.TokenStream) *VlangParser {
	VlangParserInit()
	this := new(VlangParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &VlangParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "Vlang.g4"

	return this
}

// VlangParser tokens.
const (
	VlangParserEOF                  = antlr.TokenEOF
	VlangParserT__0                 = 1
	VlangParserT__1                 = 2
	VlangParserT__2                 = 3
	VlangParserT__3                 = 4
	VlangParserT__4                 = 5
	VlangParserT__5                 = 6
	VlangParserT__6                 = 7
	VlangParserT__7                 = 8
	VlangParserT__8                 = 9
	VlangParserT__9                 = 10
	VlangParserT__10                = 11
	VlangParserT__11                = 12
	VlangParserLEN                  = 13
	VlangParserCAP                  = 14
	VlangParserAPPEND               = 15
	VlangParserMUT                  = 16
	VlangParserBOOLEANO             = 17
	VlangParserENTERO               = 18
	VlangParserFLOAT                = 19
	VlangParserDECIMAL              = 20
	VlangParserCADENA               = 21
	VlangParserCARACTER             = 22
	VlangParserSTRING_INTERPOLATION = 23
	VlangParserIF_KW                = 24
	VlangParserELSE_KW              = 25
	VlangParserWHILE_KW             = 26
	VlangParserFOR_KW               = 27
	VlangParserIN_KW                = 28
	VlangParserRETURN_KW            = 29
	VlangParserBREAK_KW             = 30
	VlangParserCONTINUE_KW          = 31
	VlangParserSWITCH_KW            = 32
	VlangParserCASE_KW              = 33
	VlangParserDEFAULT_KW           = 34
	VlangParserFALLTHROUGH_KW       = 35
	VlangParserID                   = 36
	VlangParserPLUS                 = 37
	VlangParserMINUS                = 38
	VlangParserMUL                  = 39
	VlangParserDIV                  = 40
	VlangParserMOD                  = 41
	VlangParserNOT                  = 42
	VlangParserOR                   = 43
	VlangParserAND                  = 44
	VlangParserEQ                   = 45
	VlangParserNEQ                  = 46
	VlangParserLT                   = 47
	VlangParserLE                   = 48
	VlangParserGT                   = 49
	VlangParserGE                   = 50
	VlangParserASSIGN               = 51
	VlangParserINC                  = 52
	VlangParserDEC                  = 53
	VlangParserPLUS_ASSIGN          = 54
	VlangParserMINUS_ASSIGN         = 55
	VlangParserMUL_ASSIGN           = 56
	VlangParserDIV_ASSIGN           = 57
	VlangParserMOD_ASSIGN           = 58
	VlangParserCOLON                = 59
	VlangParserSEMICOLON            = 60
	VlangParserLPAREN               = 61
	VlangParserRPAREN               = 62
	VlangParserLBRACK               = 63
	VlangParserLCOR                 = 64
	VlangParserRBRACK               = 65
	VlangParserRCOR                 = 66
	VlangParserDOT                  = 67
	VlangParserCOMMA                = 68
	VlangParserWS                   = 69
	VlangParserLINE_COMMENT         = 70
	VlangParserBLOCK_COMMENT        = 71
)

// VlangParser rules.
const (
	VlangParserRULE_programa          = 0
	VlangParserRULE_stmt              = 1
	VlangParserRULE_if_stmt           = 2
	VlangParserRULE_if_chain          = 3
	VlangParserRULE_else_stmt         = 4
	VlangParserRULE_println           = 5
	VlangParserRULE_print             = 6
	VlangParserRULE_while_stmt        = 7
	VlangParserRULE_for_stmt          = 8
	VlangParserRULE_for_enhanced_stmt = 9
	VlangParserRULE_for_init          = 10
	VlangParserRULE_for_update        = 11
	VlangParserRULE_switch_stmt       = 12
	VlangParserRULE_switch_case       = 13
	VlangParserRULE_case_values       = 14
	VlangParserRULE_default_case      = 15
	VlangParserRULE_range             = 16
	VlangParserRULE_func_call         = 17
	VlangParserRULE_func_dcl          = 18
	VlangParserRULE_struct_dcl        = 19
	VlangParserRULE_struct_field      = 20
	VlangParserRULE_transfer_stmt     = 21
	VlangParserRULE_assign_stmt       = 22
	VlangParserRULE_decl_stmt         = 23
	VlangParserRULE_array_literal     = 24
	VlangParserRULE_id_pattern        = 25
	VlangParserRULE_expresion         = 26
	VlangParserRULE_parametros        = 27
	VlangParserRULE_func_param        = 28
	VlangParserRULE_arg_list          = 29
	VlangParserRULE_func_arg          = 30
	VlangParserRULE_valores           = 31
	VlangParserRULE_valor             = 32
	VlangParserRULE_strct_instancia   = 33
	VlangParserRULE_struct_prop       = 34
	VlangParserRULE_var_type          = 35
	VlangParserRULE_struct_vector     = 36
	VlangParserRULE_incredecre        = 37
)

// IProgramaContext is an interface to support dynamic dispatch.
type IProgramaContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllStmt() []IStmtContext
	Stmt(i int) IStmtContext

	// IsProgramaContext differentiates from other interfaces.
	IsProgramaContext()
}

type ProgramaContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramaContext() *ProgramaContext {
	var p = new(ProgramaContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = VlangParserRULE_programa
	return p
}

func InitEmptyProgramaContext(p *ProgramaContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = VlangParserRULE_programa
}

func (*ProgramaContext) IsProgramaContext() {}

func NewProgramaContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramaContext {
	var p = new(ProgramaContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = VlangParserRULE_programa

	return p
}

func (s *ProgramaContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramaContext) EOF() antlr.TerminalNode {
	return s.GetToken(VlangParserEOF, 0)
}

func (s *ProgramaContext) AllStmt() []IStmtContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IStmtContext); ok {
			len++
		}
	}

	tst := make([]IStmtContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IStmtContext); ok {
			tst[i] = t.(IStmtContext)
			i++
		}
	}

	return tst
}

func (s *ProgramaContext) Stmt(i int) IStmtContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStmtContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStmtContext)
}

func (s *ProgramaContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramaContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramaContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VlangListener); ok {
		listenerT.EnterPrograma(s)
	}
}

func (s *ProgramaContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VlangListener); ok {
		listenerT.ExitPrograma(s)
	}
}

func (s *ProgramaContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case VlangVisitor:
		return t.VisitPrograma(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *VlangParser) Programa() (localctx IProgramaContext) {
	localctx = NewProgramaContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, VlangParserRULE_programa)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(77)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = ((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&111350448182) != 0) {
		{
			p.SetState(76)
			p.Stmt()
		}

		p.SetState(79)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(81)
		p.Match(VlangParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IStmtContext is an interface to support dynamic dispatch.
type IStmtContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Decl_stmt() IDecl_stmtContext
	Assign_stmt() IAssign_stmtContext
	If_stmt() IIf_stmtContext
	While_stmt() IWhile_stmtContext
	For_stmt() IFor_stmtContext
	For_enhanced_stmt() IFor_enhanced_stmtContext
	Switch_stmt() ISwitch_stmtContext
	Func_call() IFunc_callContext
	Func_dcl() IFunc_dclContext
	Struct_dcl() IStruct_dclContext
	Strct_instancia() IStrct_instanciaContext
	Transfer_stmt() ITransfer_stmtContext
	Println_() IPrintlnContext
	Print_() IPrintContext

	// IsStmtContext differentiates from other interfaces.
	IsStmtContext()
}

type StmtContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStmtContext() *StmtContext {
	var p = new(StmtContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = VlangParserRULE_stmt
	return p
}

func InitEmptyStmtContext(p *StmtContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = VlangParserRULE_stmt
}

func (*StmtContext) IsStmtContext() {}

func NewStmtContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StmtContext {
	var p = new(StmtContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = VlangParserRULE_stmt

	return p
}

func (s *StmtContext) GetParser() antlr.Parser { return s.parser }

func (s *StmtContext) Decl_stmt() IDecl_stmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDecl_stmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDecl_stmtContext)
}

func (s *StmtContext) Assign_stmt() IAssign_stmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAssign_stmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAssign_stmtContext)
}

func (s *StmtContext) If_stmt() IIf_stmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IIf_stmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IIf_stmtContext)
}

func (s *StmtContext) While_stmt() IWhile_stmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IWhile_stmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IWhile_stmtContext)
}

func (s *StmtContext) For_stmt() IFor_stmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFor_stmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFor_stmtContext)
}

func (s *StmtContext) For_enhanced_stmt() IFor_enhanced_stmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFor_enhanced_stmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFor_enhanced_stmtContext)
}

func (s *StmtContext) Switch_stmt() ISwitch_stmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISwitch_stmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISwitch_stmtContext)
}

func (s *StmtContext) Func_call() IFunc_callContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFunc_callContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFunc_callContext)
}

func (s *StmtContext) Func_dcl() IFunc_dclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFunc_dclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFunc_dclContext)
}

func (s *StmtContext) Struct_dcl() IStruct_dclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStruct_dclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStruct_dclContext)
}

func (s *StmtContext) Strct_instancia() IStrct_instanciaContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStrct_instanciaContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStrct_instanciaContext)
}

func (s *StmtContext) Transfer_stmt() ITransfer_stmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITransfer_stmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITransfer_stmtContext)
}

func (s *StmtContext) Println_() IPrintlnContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPrintlnContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPrintlnContext)
}

func (s *StmtContext) Print_() IPrintContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPrintContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPrintContext)
}

func (s *StmtContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StmtContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StmtContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VlangListener); ok {
		listenerT.EnterStmt(s)
	}
}

func (s *StmtContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VlangListener); ok {
		listenerT.ExitStmt(s)
	}
}

func (s *StmtContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case VlangVisitor:
		return t.VisitStmt(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *VlangParser) Stmt() (localctx IStmtContext) {
	localctx = NewStmtContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, VlangParserRULE_stmt)
	p.SetState(97)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 1, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(83)
			p.Decl_stmt()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(84)
			p.Assign_stmt()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(85)
			p.If_stmt()
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(86)
			p.While_stmt()
		}

	case 5:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(87)
			p.For_stmt()
		}

	case 6:
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(88)
			p.For_enhanced_stmt()
		}

	case 7:
		p.EnterOuterAlt(localctx, 7)
		{
			p.SetState(89)
			p.Switch_stmt()
		}

	case 8:
		p.EnterOuterAlt(localctx, 8)
		{
			p.SetState(90)
			p.Func_call()
		}
